Redo annoucments system & navbar scroll effect JS.

--- a/_includes/body.html
+++ b/_includes/body.html
@@ -4,7 +4,7 @@
     <!-- <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
     <META HTTP-EQUIV="Expires" CONTENT="-1"> -->
   </head>
-  <body>
+  <body id="body">
   {% if page.title == "Newsroom" or page.layout == "post" %}
     {% include scripts/facebook-sdk.html %}
   {% endif %}
