--- a/assets/scss/2-modules/_local-nav.scss
+++ b/assets/scss/2-modules/_local-nav.scss
@@ -102,6 +102,7 @@
 
   #mainNav.navbar-shrink .navbar-brand {
     transform: scale(.8, .8);
+    margin-left: -20px;
   }
 
   #mainNav.navbar-shrink .links__local-nav__newsroom-heading-link {
