--- a/assets/scss/2-modules/_error.scss
+++ b/assets/scss/2-modules/_error.scss
@@ -1,10 +1,10 @@
 
 .error__main-heading {
   color: $primary-red;
-  font-weight: $secondaryfont-weight-bold;
+  font-weight: $font-weight-bold;
 }
 
 .error__sub-heading {
   color: $primary-blue;
-  font-weight: $secondaryfont-weight-bold;
+  font-weight: $font-weight-bold;
 }
