--- a/assets/scss/0-tools/_bootstrap-overrides.scss
+++ b/assets/scss/0-tools/_bootstrap-overrides.scss
@@ -28,3 +28,22 @@ body.modal-open {
 .bootstrap-overrides__modal-footer > :not(:last-child) {
   margin-right: .25rem;
 }
+
+.col-xxl-8,
+.col-xxl-4 {
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+@media screen and (min-width: 1400px) {
+  .col-xxl-8 {
+    flex: 0 0 66.666667%;
+    max-width: 66.666667%;
+  }
+  .col-xxl-4 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+}
