--- a/assets/scss/2-modules/_latest-news-widget.scss
+++ b/assets/scss/2-modules/_latest-news-widget.scss
@@ -14,8 +14,8 @@
 
 .latest-news-widget__latest__h {
   font-size: 41px;
-  font-weight: $base-font-weigth-bold;
-  font-family: $basefont-stack;
+  font-weight: $font-weight-bolder;
+  font-family: $font-family-paragraph;
   margin: 0 0 18px;
   line-height: 1;
   padding: 15px 0;
@@ -121,6 +121,7 @@
 }
 
 .latest-news-widget__latest__tease__number {
+  color: #fff
   display: block;
   float: left;
   font-family: akkurat, sans-serif;
@@ -137,7 +138,6 @@
   margin: -1px 7px 0 -2px;
   letter-spacing: 0;
   transition: all .2s ease;
-  color: #fff
 }
 
 .latest-news-widget__feature__tease__overline, .latest-news-widget__latest__tease__overline {
@@ -203,29 +203,6 @@
   .latest-news-widget__latest__tease__img-mod--default {
     margin-right: 10px
   }
-}
-
-.latest-news-widget__latest__tease--has-image.latest-news-widget__latest__tease--profile .latest-news-widget__latest__tease__hgroup {
-  margin-right: 85px
-}
-
-.latest-news-widget__latest__tease--has-image.latest-news-widget__latest__tease--profile .latest-news-widget__latest__tease__link {
-  display: block
-}
-
-.latest-news-widget__latest__tease__img-mod--profile {
-  width: 80px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0
-}
-
-.latest-news-widget__latest__tease__img-mod--profile .latest-news-widget__latest__tease__img {
-  max-height: 95%;
-  position: absolute;
-  right: 0;
-  bottom: 0
 }
 
 .latest-news-widget__latest__tease__overline {
