--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,18 +8,16 @@
 @import '1-base/buttons';
 
 // Modular components
-@import '2-modules/header';
+@import '2-modules/news-header';
 @import '2-modules/footer';
 @import '2-modules/sliders';
-@import '2-modules/latest-news-widget';
-@import '2-modules/local-nav';
+//@import '2-modules/latest-news-widget';
 @import '2-modules/events';
 @import '2-modules/fb-widget';
 @import '2-modules/featured-videos';
 @import '2-modules/timeline';
 @import '2-modules/social-icons';
 @import '2-modules/footer';
-@import '2-modules/global-nav';
 @import '2-modules/playlist';
 @import '2-modules/archive';
 @import '2-modules/bios';
