--- a/_includes/news-header.html
+++ b/_includes/news-header.html
@@ -3,7 +3,7 @@
     {% for post in site.posts %}
       {% assign approved_posts = site.posts | where: "post_approved", true %}
     {% endfor %}
-    <div id="newsHeaderPreviewCol" class="col-lg-7 col-xl-8">
+    <div id="newsHeaderPreviewCol" class="col-lg-7 col-xl-8 news-header__preview-col">
     {% for post in approved_posts limit: 4 %}
       {% if post.expire_date == nil or post.expire_date > site.time %}
       <a id="preview{{ forloop.index }}" data-toggle="modal" {% if post.video_link != nil %}data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}"{% endif %}class="news-header__preview--link links__news-header--hover newsHeader-preview-link{% if forloop.first == true %} newsHeader-link-active{% endif %}" href="#modal{{ forloop.index }}" tabindex="-1" aria-hidden="{% if forloop.first == true %}false{% else %}true{% endif %}">
@@ -11,17 +11,19 @@
         <div class="col-12 col-md-7 col-lg-12 col-xl-7 col-xxl-8 order-1 order-md-2 order-lg-1 order-xl-2 news-header__img-col">
         {% if post.video_link != nil %}
           <img id="playIcon{{ forloop.index }}" src="{{ page.baseurl }}assets/img/play.svg" alt="" class="latest-news-widget__play-icon js-play-icon">
-          <img id="latestNewsImage{{ forloop.index }}" class="latest-news-widget__feature__img js-latest-news-widget-img" src="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg" alt="{{ post.news_image_alt }}">
+          <img class="latest-news-widget__feature__img js-latest-news-widget-img" src="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg" alt="">
         {% else %}
-          <img id="latestNewsImage{{ forloop.index }}" class="img__full-width news-header__img" {% if forloop.first == false %}src="{{ page.baseurl }}assets/img/kcc-placeholder.png" data-{% endif %}src="{{ page.baseurl }}{{ post.image }}" alt="{{ post.image_alt }}">
+        <div class="news-header__img-wrapper">
+          <img class="img__full-width news-header__img{% if forloop.first == true %} news-header__img--first{% endif %}" {% if forloop.first == false %}src="{{ page.baseurl }}assets/img/kcc-placeholder.png" data-{% endif %}src="{{ page.baseurl }}{{ post.image }}" alt="">
+        </div>
         {% endif %}
         </div>
         <div class="col-12 col-md-5 col-lg-12 col-xl-5 col-xxl-4 order-2 order-md-1 order-lg-2 order-xl-1 news-header__info-col">
         {% if post.video_link != nil %}
         {% else %}
           <div class="news-header__info--wrapper">
-            <span class="typography__news-header--title">{{ post.title }}</span>
-            <h4 class="typography__news-header--lead">{{ post.article_lead }}</h4>
+            <span class="news-header__title typography__news-header--title{% if forloop.first == true %} news-header__title--first{% endif %}">{{ post.title }}</span>
+            <h4 class="typography__news-header--lead news-header__lead{% if forloop.first == true %} news-header__lead--first{% endif %}">{{ post.article_lead }}</h4>
           </div>
         {% endif %}
         </div>
@@ -55,7 +57,7 @@
               {% else %}
               <!-- If the video link is blank/nil -->
               <li class="news-header__list--item">
-                <a data-toggle="modal" class="news-header__list--link links__no-underline{% if forloop.first == true %} news-header__active{% endif %} newsHeader-list-link" href="#modal{{ forloop.index }}" data-preview="#preview{{ forloop.index }}">
+                <a data-toggle="modal" class="news-header__list--link links__no-underline{% if forloop.first == true %} news-header__active{% endif %} newsHeader-list-link" href="#modal{{ forloop.index }}" data-preview="preview{{ forloop.index }}">
                   <div class="news-header__list--heading-div">
                     <h3 class="news-header__list--heading typography__news-header--list-heading">
                     <span class="news-header__list--number">{{ forloop.index }}</span>{{ post.title }}</h3>
