--- a/_includes/news-header.html
+++ b/_includes/news-header.html
@@ -6,12 +6,12 @@
     <div id="newsHeaderPreviewCol" class="col-xl-8 news-header__preview-col">
     {% for post in approved_posts limit: 4 %}
       {% if post.expire_date == nil or post.expire_date > site.time %}
-      <a id="preview{{ forloop.index }}" data-toggle="modal" {% if post.video_link != nil %}data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" {% endif %}class="news-header__preview--link links__news-header--hover newsHeader-preview-link{% if forloop.first == true %} newsHeader-link-active{% endif %}" href="#modal{{ forloop.index }}" tabindex="-1" aria-hidden="{% if forloop.first == true %}false{% else %}true{% endif %}">
+      <a id="preview{{ forloop.index }}" data-toggle="modal" {% if post.video_link != nil %}data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" {% endif %}class="news-header__preview--link links__news-header--hover newsHeader-preview-link{% if post.video_link != nil %} newsHeader-video-link{% endif %}{% if forloop.first == true %} newsHeader-link-active{% endif %}" data-target="#modal{{ forloop.index }}" href="#" tabindex="-1" aria-hidden="{% if forloop.first == true %}false{% else %}true{% endif %}">
         <div class="row">
           <div class="col-md-7 col-xxl-8 order-1 order-md-2 news-header__img-col">
           {% if post.video_link != nil %}
             <div class="news-header__img-wrapper text-right">
-              <img src="{{ page.baseurl }}assets/img/play.svg" alt="" class="news-header__play-icon">
+              <img src="{{ page.baseurl }}assets/img/play.svg" alt="" class="news-header__play-icon{% if forloop.first == true %} news-header__play-icon--first{% endif %}">
               <img class="img__full-width news-header__img{% if forloop.first == true %} news-header__img--first{% endif %}" {% if forloop.first == false %}src="{{ page.baseurl }}assets/img/kcc-placeholder.png" data-{% endif %}src="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg" alt="">
             </div>
           {% else %}
@@ -43,7 +43,7 @@
               {% if post.video_link != nil %}
               <!-- If it has a video link in the post -->
               <li class="news-header__list--item">
-                <a data-toggle="modal" {% if post.video_link != nil %}data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" {% endif %}class="news-header__list--link links__no-underline{% if forloop.first == true %} news-header__active{% endif %} newsHeader-list-link" href="#modal{{ forloop.index }}" data-preview="preview{{ forloop.index }}">
+                <a data-toggle="modal" {% if post.video_link != nil %}data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" {% endif %}class="news-header__list--link links__no-underline{% if forloop.first == true %} news-header__active{% endif %}{% if post.video_link != nil %} newsHeader-video-link{% endif %} newsHeader-list-link" href="#" data-target="#modal{{ forloop.index }}" data-preview="preview{{ forloop.index }}">
                   <div class="news-header__list--heading-div">
                     <h3 class="news-header__list--heading typography__news-header--list-heading">
                     <span class="news-header__list--number">{{ forloop.index }}</span>{{ post.title }}</h3>
@@ -76,3 +76,4 @@
     </div>
   </div>
 </header>
+{% include news-header-modals.html %}
