--- a/_includes/events.html
+++ b/_includes/events.html
@@ -7,8 +7,10 @@
   </div>
   <div class="row">
     <div class="col">
-      <div data-tockify-component="calendar" data-tockify-calendar="kankakeecc"></div>
-      <script data-cfasync="false" data-tockify-script="embed" src="https://public.tockify.com/browser/embed.js"></script>
+      <div class="jsParentWatcher">
+        <div id="tacos" data-tockify-component="calendar" data-tockify-calendar="kankakeecc"></div>
+        <script data-cfasync="false" data-tockify-script="embed" src="https://public.tockify.com/browser/embed.js"></script>
+      </div>
     </div>
   </div>
 </div>
