Add info, visit, & apply buttons & styling to reflect print-design.

--- a/_includes/infographic-post.html
+++ b/_includes/infographic-post.html
@@ -77,5 +77,12 @@
       </ul>
     </div>
     <div class="d-none d-md-block col-md-1"></div>
+    <div class="col-12 text-center">
+      <ul class="infographic__list">
+        <li class="infographic__list--item"><a href="https://info.kcc.edu" class="btn btn-primary infographic__btn infographic__btn--typography infographic__btn--blue">Info: <strong>info.kcc.edu</strong></a></li>
+        <li class="infographic__list--item"><a href="https://visit.kcc.edu" class="btn btn-primary infographic__btn infographic__btn--typography infographic__btn--orange">Visit: <strong>visit.kcc.edu</strong></a></li>
+        <li class="infographic__list--item"><a href="https://apply.kcc.edu" class="btn btn-primary infographic__btn infographic__btn--typography infographic__btn--red">Apply: <strong>apply.kcc.edu</strong></a></li>
+      </ul>
+    </div>
   </div>
 </div>
