Add infographic content. Adjust responsive layout.

--- a/_includes/infographic-post.html
+++ b/_includes/infographic-post.html
@@ -3,30 +3,17 @@
   <img src="{{ page.baseurl }}uploads/kcc_power-of-community_white.svg" class="infographic__logo" alt="Kankakee Community College. The Power of Community">
   <img src="{{ page.baseurl }}uploads/zippia_job-placement.svg" class="infographic__zippia" alt="#1 in job placement for community colleges in Illinois, according to zippia.com">
   <div class="row infographic__row--stats infographic__row--divider">
-    <div class="col-md-6 infographic__left">
-      <div class="row">
-        <div class="col-12 infographic__icon--col">
-          <img src="{{ page.baseurl }}uploads/thumbs-up.svg" class="infographic__thumbs-up" alt="">
-        </div>
-        <div class="col-12">
-          <p class="text-center infographic__stat infographic__stat--left">
-            <span class="infographic__stat--large">98%</span>&nbsp;of<br>our&nbsp;2019&nbsp;grads<br><span class="infographic__stat--red">would&nbsp;encourage<br>others&nbsp;to&nbsp;attend&nbsp;KCC</span>
-          </p>
-        </div>
-      </div>
+    <div class="col-md-6 d-flex align-items-start justify-content-center justify-content-md-end">
+      <p class="text-center infographic__stat infographic__stat--left">
+        <span class="infographic__stat--large">98%</span>&nbsp;of<br>our&nbsp;2019&nbsp;grads<br><span class="infographic__stat--red">would&nbsp;encourage<br>others&nbsp;to&nbsp;attend&nbsp;KCC</span>
+      </p>
+      <img src="{{ page.baseurl }}uploads/thumbs-up.svg" class="infographic__thumbs-up" alt="">
     </div>
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-1 col-md-3"></div>
-        <div class="col-5">
-          <img src="{{ page.baseurl }}uploads/ratio.svg" class="img-fluid" alt="">
-        </div>
-        <div class="col-6 col-md-4 mt-auto">
-          <p class="text-center infographic__stat">
-            <span class="infographic__stat--large">13:1</span><br>Student&nbsp;to<br>Faculty&nbsp;ratio
-          </p>
-        </div>
-      </div>
+    <div class="col-md-6 d-flex">
+      <img src="{{ page.baseurl }}uploads/ratio.svg" class="img-fluid" alt="">
+      <p class="text-center infographic__stat">
+        <span class="infographic__stat--large">13:1</span><br>Student&nbsp;to<br>Faculty&nbsp;ratio
+      </p>
     </div>
   </div>
   <div class="row infographic__row--divider">
@@ -77,7 +64,62 @@
       </ul>
     </div>
     <div class="d-none d-md-block col-md-1"></div>
-    <div class="col-12 text-center">
+  </div>
+  <div class="row">
+    <div class="col-sm-8 order-2 order-sm-1">
+      <p class="infographic__quote">
+        “It’s worth the struggle. If I didn’t have my son, if I didn’t have to struggle through classes, I don’t think I’d be where I am today. I’m now very appreciative of everything because I started with nothing. I had to work for it all and the things I learned along the way are priceless.”<br>
+        <strong>-Taylor Bradley, A.A.S. 2018</strong>
+      </p>
+    </div>
+    <div class="col-sm-4 order-1 order-sm-2 text-center">
+      <img src="{{ page.baseurl }}uploads/infographic_taylor-bradley.jpg" class="img-fluid py-2" alt="Taylor Bradley">
+    </div>
+    <div class="col-sm-8 order-4 order-sm-3">
+      <p class="infographic__quote">
+        “I chose KCC because it makes economic sense, and for the convenience. I was able to take a lot of general education classes at night and still work full time. I’ve found plenty of opportunities to succeed, and the staff are always there to help.”<br>
+        <strong>-Brandon Schunke, RN class of 2020</strong>
+      </p>
+    </div>
+    <div class="col-sm-4 order-3 order-sm-4 text-center">
+      <img src="{{ page.baseurl }}uploads/infographic_brandon-schunke.jpg" class="img-fluid py-2" alt="Brandon Schunke">
+    </div>
+  </div>
+  <div class="row py-3">
+    <div class="col-sm-6 text-center text-sm-right">
+      <img src="{{ page.baseurl }}uploads/infographic_student-age.svg" class="img-fluid infographic__chat-bubble mr-3" alt="Did you know...46% of KCC grads are 25+?">
+    </div>
+    <div class="col-sm-6 d-flex align-items-start justify-content-center justify-content-sm-start">
+      <img src="{{ page.baseurl }}uploads/internet_icon.svg" class="infographic__internet" alt="">
+      <p class="text-right infographic__stat infographic__stat--black">
+        <span class="infographic__stat--red infographic__stat--red-larger">Convenience</span><br>
+          <strong>Online and hybrid</strong><br>
+          (part online, part in-person)<br>
+          <strong>classes offered</strong>
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      <img src="{{ page.baseurl }}uploads/infographic_wioa.svg" class="img-fluid" alt="">
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col">
+      <p class="infographic__stat infographic__stat--black text-center">
+        <span class="infographic__stat--red infographic__stat--med">We’re here to help!</span><br>
+        <em>KCC has many services to make sure you have the support you need:</em>
+      </p>
+      <ul class="infographic__list--arrows">
+        <li><span class="infographic__stat"><em>FREE Tutoring</em></span></li>
+        <li><span class="infographic__stat"><em>Test prep help</em></span> – Customized for different programs</li>
+        <li><span class="infographic__stat"><em>Advisor</em></span>  – Assist with course plans</li>
+        <li><span class="infographic__stat"><em>Career advisement</em></span> – Find your calling!</li>
+        <li><span class="infographic__stat"><em>Financial aid office</em></span> – FAFSA workshops</li>
+        <li><span class="infographic__stat"><em>Bus service</em></span> – Discount tokens available</li>
+      </ul>
+    </div>
+    <div class="col-12 text-center mb-4">
       <ul class="infographic__list">
         <li class="infographic__list--item"><a href="https://info.kcc.edu" class="btn btn-primary infographic__btn infographic__btn--typography infographic__btn--blue">Info: <strong>info.kcc.edu</strong></a></li>
         <li class="infographic__list--item"><a href="https://visit.kcc.edu" class="btn btn-primary infographic__btn infographic__btn--typography infographic__btn--orange">Visit: <strong>visit.kcc.edu</strong></a></li>
