--- a/assets/scss/2-modules/_infographic.scss
+++ b/assets/scss/2-modules/_infographic.scss
@@ -8,13 +8,13 @@
   height: auto;
   width: 100%;
   position: absolute;
-  z-index: -1;
 }
 
 .infographic__logo {
   width: 90%;
   margin-left: 5%;
   margin-right: 5%;
+  opacity: .9999; // NEEDED B/C OF WEIRD CSS ABSOLUTE-POSITION/Z-INDEX/OPACITY QUIRK W/ `.infographic__bg` (look it up on css-tricks!)
 }
 
 .infographic__zippia {
@@ -22,12 +22,12 @@
   margin-left: 25%;
   margin-right:  25%;
   position: relative;
-  top: -2rem;
+  top: -.5rem;
 }
 
 .infographic__row--stats {
   position: relative;
-  top: -3rem;
+  top: -1.5rem;
 }
 
 .infographic__row--divider::after {
@@ -40,28 +40,13 @@
   width: 100%;
 }
 
-.infographic__left {
-  max-width: 420px;
-}
-
 .infographic__stat {
   color: $primary-blue;
   font-family: 'Oswald', sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.25rem;
   font-weight: 600;
   letter-spacing: .025rem;
   line-height: 1.2;
-}
-
-.infographic__stat--left {
-  position: relative;
-  left: -1.5rem;
-}
-
-@media screen and (min-width: 400px) {
-  .infographic__stat--left {
-    left: 0;
-  }
 }
 
 .infographic__stat--large {
@@ -72,23 +57,35 @@
 
 .infographic__stat--red {
   color: $primary-red;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
+  //font-size: 1.8rem;
+  font-weight: 600;
   letter-spacing: .025rem;
   line-height: 1.1;
+}
+
+.infographic__stat--red-larger {
+  font-size: 2.5rem;
+}
+
+.infographic__stat--med {
+  font-size: 2rem;
+}
+
+.infographic__stat--black {
+  color: $black;
+  font-weight: 400;
+}
+
+.infographic__stat--black strong {
+  font-weight: 600;
 }
 
 .infographic__thumbs-up {
   width: 100px;
   height: 100px;
-  position: absolute;
-  top: 0;
-  right: -10px;
-}
-
-@media screen and (min-width: 350px) {
-  .infographic__thumbs-up {
-    right: 0;
-  }
+  position: relative;
+  left: -1rem;
 }
 
 .infographic__icon--col {
@@ -206,5 +203,39 @@
   &--item {
     padding-bottom: .25rem;
     padding-top: .25rem;
+  }
+}
+
+.infographic__quote {
+  color: #000000;
+}
+
+.infographic__internet {
+  width: 75px;
+}
+
+.infographic__chat-bubble {
+  filter: drop-shadow(6px 8px 5px rgba(0,0,0,.5));
+  max-width: 280px;
+  position: relative;
+  top: -1rem;
+}
+
+@media screen and (min-width: 576px) {
+  .infographic__chat-bubble {
+    top: -2rem;
+  }
+}
+
+.infographic__list--arrows {
+  list-style-type: none;
+  & li:before {
+    background-image: url('/uploads/infographic_list-disc.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    content: ' ';
+    display: inline-block;
+    height: 1.5rem;
+    width: 1.5rem;
   }
 }
