--- a/_includes/infographic-post.html
+++ b/_includes/infographic-post.html
@@ -9,7 +9,7 @@
       </p>
       <img src="{{ page.baseurl }}uploads/thumbs-up.svg" class="infographic__thumbs-up" alt="">
     </div>
-    <div class="col-md-6 d-flex">
+    <div class="col-md-6 d-flex align-items-start justify-content-center justify-content-md-start">
       <img src="{{ page.baseurl }}uploads/ratio.svg" class="img-fluid" alt="">
       <p class="text-center infographic__stat">
         <span class="infographic__stat--large">13:1</span><br>Student&nbsp;to<br>Faculty&nbsp;ratio
@@ -101,7 +101,9 @@
   </div>
   <div class="row">
     <div class="col text-center">
-      <img src="{{ page.baseurl }}uploads/infographic_wioa.svg" class="img-fluid" alt="">
+      <a href="http://www.kcc.edu/wioa">
+        <img src="{{ page.baseurl }}uploads/infographic_wioa.svg" class="img-fluid" alt="Get up to $10,000 for career training transportation, books, supplies, etc. See if you qualify at www.kcc.edu/wioa">
+      </a>
     </div>
   </div>
   <div class="row mt-3">
