Finish infographic content. Create inline styling...
Inline styling was created so that the custom styling for this infographic post does not have to be applied to all of `news.kcc.edu`.

--- a/_includes/infographic-post.html
+++ b/_includes/infographic-post.html
@@ -129,4 +129,11 @@
       </ul>
     </div>
   </div>
+  <div class="row">
+    <div class="col mb-4">
+      <hr>
+      <p class="infographic__sources">Sources: KCC Future grad survey; KCC Institutional Research Office, 2017-2019; National Center for Educational Statistics (nces.ed.gov); Ruffalo Noel Levitz; zippia.com.</p>
+      <hr>
+    </div>
+  </div>
 </div>
