--- a/assets/scss/2-modules/_infographic.scss
+++ b/assets/scss/2-modules/_infographic.scss
@@ -1,3 +1,6 @@
+// IF YOU THINK THIS IS JUST AN ORPHAN SASS FILE...DON'T DELETE IT!!
+// This is the source file for the styling of the infographich news release based off of 'slim-jim add'.
+
 .infographic {
   height: auto;
   position: relative;
@@ -236,6 +239,11 @@
     content: ' ';
     display: inline-block;
     height: 1.5rem;
+    vertical-align: text-bottom;
     width: 1.5rem;
   }
+}
+
+.infographic__sources {
+  font-size: .9rem;
 }
