--- a/_includes/infographic-post.html
+++ b/_includes/infographic-post.html
@@ -26,7 +26,7 @@
         <li>Electrical Engineering Technology</li>
         <li>Child Development</li>
         <li>Manufacturing Technology</li>
-        <li>Medical Laboritory Technology</li>
+        <li>Medical Laboratory Technology</li>
         <li>Nursing&nbsp;&bull;&nbsp;Paramedic&nbsp;&bull;&nbsp;Radiography</li>
         <li>Resperatory Therapist</li>
         <li>Solar-Photovoltaic&nbsp;&bull;&nbsp;Welding</li>
@@ -51,7 +51,7 @@
         <li>Admissions and Financial Aid&nbsp;&bull;&nbsp;Student centeredness</li>
         <li>Service excellence&nbsp;&bull;&nbsp;Registration effectiveness</li>
         <li>Safety and security&nbsp;&bull;&nbsp;Academic Services</li>
-        <li>Responsiveness to diverse polpulations</li>
+        <li>Responsiveness to diverse populations</li>
       </ul>
     </div>
     <div class="col-md-5">
@@ -59,7 +59,7 @@
       <ul>
         <li>Rating of college experience met expectations</li>
         <li>Students completing and receiving passing grades in distance learning classes</li>
-        <li>Fist-time, full-time students who completed or transferred within 3 years</li>
+        <li>First-time, full-time students who completed or transferred within 3 years</li>
         <li>Part-time students who completed within 3 years</li>
       </ul>
     </div>
