Fix wierd layout issue in modal in IE.

--- a/_includes/infographic-post.html
+++ b/_includes/infographic-post.html
@@ -10,7 +10,7 @@
       <img src="{{ page.baseurl }}uploads/thumbs-up.svg" class="infographic__thumbs-up" alt="">
     </div>
     <div class="col-md-6 d-flex align-items-start justify-content-center justify-content-md-start">
-      <img src="{{ page.baseurl }}uploads/ratio.svg" class="img-fluid" alt="">
+      <img src="{{ page.baseurl }}uploads/ratio.svg" class="img-fluid infographic__ratio" alt="">
       <p class="text-center infographic__stat">
         <span class="infographic__stat--large">13:1</span><br>Student&nbsp;to<br>Faculty&nbsp;ratio
       </p>
