Fix spelling typo.

--- a/_includes/infographic-post.html
+++ b/_includes/infographic-post.html
@@ -28,7 +28,7 @@
         <li>Manufacturing Technology</li>
         <li>Medical Laboratory Technology</li>
         <li>Nursing&nbsp;&bull;&nbsp;Paramedic&nbsp;&bull;&nbsp;Radiography</li>
-        <li>Resperatory Therapist</li>
+        <li>Respiratory Therapist</li>
         <li>Solar-Photovoltaic&nbsp;&bull;&nbsp;Welding</li>
       </ul>
     </div>
