--- a/assets/scss/2-modules/_timeline.scss
+++ b/assets/scss/2-modules/_timeline.scss
@@ -7,7 +7,15 @@
 .timeline__wrapper {
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
+  & iframe {
+    max-width: 100%;
+    width: 100%; // For older browsers that can't handle the 'vw' unit
+    width: 100vw;
+    & img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
