--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Meta -->
     <meta charset="utf-8">
-    <!-- <meta http-equiv="x-ua-compatible" content="ie=edge"> -->
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{{page.title}} - {{site.title}}</title>
     <meta name="description" content="{{page.description}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,8 +43,6 @@
 {% endif %}
     <!-- YouTube API -->
     <meta name="yt-api-k" value="AIzaSyBpxv9JNl4AX816ScNmZcqHkLncMUeiAws" />
-    <!-- Testing the IE-10 taco compatibility issue -->
-    <meta http-equiv="X-UA-Compatible" content="IE=10" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Bootstrap 4 Beta stylesheet CDN link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
