--- a/_includes/news-header.html
+++ b/_includes/news-header.html
@@ -6,16 +6,16 @@
     <div id="newsHeaderPreviewCol" class="col-xl-8 news-header__preview-col">
     {% for post in approved_posts limit: 4 %}
       {% if post.expire_date == nil or post.expire_date > site.time %}
-      <a id="preview{{ forloop.index }}" data-toggle="modal" {% if post.video_link != nil %}data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" {% endif %}class="news-header__preview--link links__news-header--hover newsHeader-preview-link{% if post.video_link != nil %} newsHeader-video-link{% endif %}{% if forloop.first == true %} newsHeader-link-active{% endif %}" data-target="#modal{{ forloop.index }}" href="#" tabindex="-1" aria-hidden="{% if forloop.first == true %}false{% else %}true{% endif %}">
-        <div class="row">
+      <a id="preview{{ forloop.index }}" data-toggle="modal" {% if post.video_link != nil %}data-video="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" {% endif %}class="news-header__preview--link links__news-header--hover newsHeader-preview-link height__100{% if post.video_link != nil %} newsHeader-video-link{% endif %}{% if forloop.first == true %} newsHeader-link-active{% endif %}" data-target="#modal{{ forloop.index }}" href="#" tabindex="-1" aria-hidden="{% if forloop.first == true %}false{% else %}true{% endif %}">
+        <div class="row height__100">
           <div class="col-md-7 col-xxl-8 order-1 order-md-2 news-header__img-col">
           {% if post.video_link != nil %}
-            <div class="news-header__img-wrapper text-right">
+            <div class="news-header__img-wrapper height__100 text-right">
               <img src="{{ page.baseurl }}assets/img/play.svg" alt="" class="news-header__play-icon{% if forloop.first == true %} news-header__play-icon--first{% endif %}">
               <img class="img__full-width news-header__img{% if forloop.first == true %} news-header__img--first{% endif %}" {% if forloop.first == false %}src="{{ page.baseurl }}assets/img/kcc-placeholder.png" data-{% endif %}src="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg" alt="">
             </div>
           {% else %}
-            <div class="news-header__img-wrapper text-right">
+            <div class="news-header__img-wrapper height__100 text-right">
               <img class="img__full-width news-header__img{% if forloop.first == true %} news-header__img--first{% endif %}" {% if forloop.first == false %}src="{{ page.baseurl }}assets/img/kcc-placeholder.png" data-{% endif %}src="{{ page.baseurl }}{{ post.image }}" alt="">
             </div>
           {% endif %}
