--- a/assets/scss/2-modules/_news-header.scss
+++ b/assets/scss/2-modules/_news-header.scss
@@ -2,6 +2,34 @@
 // ==========================================
 @import './news-header-animations';
 
+.news-header__rollup--width {
+  width: 95%;
+}
+
+@media screen and (min-width: 576px) {
+  .news-header__rollup--width {
+    width: 90%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .news-header__rollup--width {
+    width: 70%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .news-header__rollup--width {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width:1200px) {
+  .news-header__rollup--width {
+    width: 50%;
+  }
+}
+
 .news-header {
   margin-bottom: 2rem;
   max-width: 1400px;
@@ -81,10 +109,11 @@
 .news-header__heading {
   background: #fff;
   border-bottom: none;
+  color: $primary-blue;
   display: none;
   font-family: $font-family-paragraph;
   font-size: 2.2rem;
-  font-weight: $font-weight-bolder;
+  font-weight: $font-weight-bold;
   left: 0;
   line-height: 1;
   margin-bottom: .5rem;
@@ -93,6 +122,7 @@
   padding-top: .25rem;
   position: absolute;
   right: 0;
+  text-transform: uppercase;
   top: 0;
 }
 
@@ -114,6 +144,11 @@
   border-bottom-style: solid;
   border-bottom-width: thick;
 }
+
+.news-header__date {
+  color: #ddd;
+}
+
 
 .news-header__list {
   list-style: none;
@@ -149,6 +184,7 @@
   padding-bottom: 1rem;
   border-bottom: 1px solid #000;
   position: relative;
+  width: 100%;
   &:after {
     content: "";
     display: table;
@@ -223,12 +259,16 @@
   transition: all .2s ease;
 }
 
-.new-header__list--link:focus .news-header__list--number,
-.new-header__list--link:hover .news-header__list--number,
-.news-header__active .news-header__list--number {
+.news-header__list--item:hover .news-header__list--number,
+.news-header__list--item:focus .news-header__list--number {
   color: $primary-red;
   background-color: #fff;
   box-shadow: 0 0 0 1.4px $primary-red inset;
+}
+
+.news-header__list--item:hover .typography__news-header--list-heading,
+.news-header__list--item:focus .typography__news-header--list-heading {
+  color: $primary-red;
 }
 
 .new-header__list--link:focus {
